splitter visible, map resizes correctly

--- a/js/ShowFeatureTable/Templates/ShowFeatureTable.css
+++ b/js/ShowFeatureTable/Templates/ShowFeatureTable.css
@@ -20,6 +20,10 @@
   padding:1px; */
 }
 
+#featureTableContainer {
+  min-height:150px;
+}
+
 .esriFeatureTable {
     font-family: inherit;
     font-size: 16px;
@@ -27,7 +31,7 @@
 
 .dijitSplitterH {
     height: 8px;
-    width: calc(100% - 2px);
+    margin-top: -7px;
     cursor: row-resize;
     border-width: 1px;
     -webkit-tap-highlight-color: transparent;
@@ -71,8 +75,8 @@
 #mapDiv {
     /*width: calc(100% - 0px) !important;
     height: calc(100% - 0px) !important;*/
-    height:100%;
-    width:100%;
+    height:100% !important;
+    width:100% !important;
 }
 
 /*.splitterContent {
